@@ -2,6 +2,7 @@ Version 1.1.8 (released ??-???-????)
 
   * fix slowness triggered by allow_compress=1 configuration (issue #467)
   * allow use of 'fcrypt' for Windows standalone.py authn support (issue #471)
+  * yield more useful error on directory markup/annotate request (issue #472)
 
 Version 1.1.7 (released 09-Sep-2010)
 
